--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/icon-button/_icon-button.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/icon-button/_icon-button.scss
@@ -2,41 +2,41 @@
 .icon-button:link,
 .icon-button:visited {
   @include transition(all, 0.15s, ease-in);
-  @include adjust-font-size-to($xs-heading, 1);
+  @include adjust-font-size-to($text, .9);
   color: $primary-dark;
   display: flex;
   justify-content: flex-start;
   align-items: center;
   background-color: $trust-ltst;
-  padding: 1em 2em;
+  padding: .75em 2em;
   border-radius: 5px;
-  margin: 0.5em 0 0.5em 35px;
+  margin: 0.5em 0 0.5em 30px;
   text-decoration: none;
   font-weight: 600;
 
   svg {
     display: flex;
-    width: 50px;
-    height: 60px;
+    width: 45px;
+    height: 55px;
     fill: $primary-dark;
     
     @include breakpoint($bp3) {
-      width: 58px;
-      height: 68px;
+      width: 50px;
+      height: 60px;
     }
   }
 
   .icon-button__container {
     display: block;
-    margin-left: -60px;
+    margin-left: -53px;
     margin-right: .75em;
     
     @include breakpoint($bp2) {
-      margin-left: -65px;
+      margin-left: -56px;
     }
     
     @include breakpoint($bp3) {
-      margin-left: -70px;
+      margin-left: -62px;
     }
   }
 }
