--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
@@ -1,20 +1,25 @@
 .homepage-hero {
+  @extend %clearfix;
   position: relative;
   padding-top: 100px;
   width: 100%;
 
   @include breakpoint($bp2) {
-    padding: 100px 2em 0;
+    padding: 70px 2em 0;
   }
 
   @include breakpoint($bp3) {
     padding: 0 2em;
-    margin: 5em auto 0;
-    max-width: 1600px;
+    margin: 4em auto 4.5em;
+    max-width: 1500px;
   }
-
-  @include breakpoint(1050px) {
-    margin-top: 6em;
+  
+  @include breakpoint($bp4) {
+    margin: 5.5em auto 12em;
+  }
+  
+  @include breakpoint($bp5) {
+    margin: 7em auto 12em;
   }
 
   .homepage-hero__content {
@@ -24,12 +29,12 @@
     border-bottom: 4px solid $trust-ltr;
     border-radius: 0 5px 5px 0;
     width: 96%;
-    padding: 2em;
+    padding: 2em 1em 2em 2em;
     margin-top: 40%;
     box-shadow: 0 2px 8px rgba($black, 0.15);
 
     @include breakpoint($bp0) {
-      width: 90%;
+      width: 95%;
       margin-top: 45%;
     }
 
@@ -37,6 +42,7 @@
       border: 4px solid $trust-ltr;
       border-radius: 5px;
       width: 90%;
+      padding: 2em;
     }
 
     @include breakpoint($bp3) {
@@ -63,62 +69,42 @@
         color: $primary-dark;
         display: block;
         text-transform: uppercase;
-        font-size: 0.7em;
+        font-size: .9em;
         line-height: 1.05em;
         font-weight: 500;
         word-wrap: break-word;
 
         @include breakpoint($bp0) {
-          font-size: .78em;
-        }
-
-        @include breakpoint("425px") {
-          font-size: .975em;
-        }
-
-        @include breakpoint("500px") {
-          font-size: 1.18em;
-        }
-
-        @include breakpoint($bp2) {
-          font-size: 1.125em;
-          line-height: 1em;
-        }
-
-        @include breakpoint("675px") {
-          font-size: 1.3em;
-        }
-
-        @include breakpoint("775px") {
-          font-size: 1.55em;
-        }
-
-        @include breakpoint($bp3) {
           font-size: 1em;
         }
 
-        @include breakpoint("1000px") {
-          font-size: 1.12em;
+        @include breakpoint("425px") {
+          font-size: 1.15em;
         }
 
-        @include breakpoint("1100px") {
-          font-size: 1.225em;
+        @include breakpoint($bp2) {
+          font-size: 1.25em;
+          line-height: 1em;
+        }
+
+        @include breakpoint("775px") {
+          font-size: 1.5em;
+        }
+
+        @include breakpoint($bp3) {
+          font-size: 1.2em;
         }
 
         @include breakpoint($bp4) {
-          font-size: 1.21em;
-        }
-
-        @include breakpoint("1300px") {
-          font-size: 1.3em;
-        }
-
-        @include breakpoint("1400px") {
           font-size: 1.4em;
+        }
+        
+        @include breakpoint(1400px) {
+          font-size: 1.6em;
         }
 
         @include breakpoint($bp5) {
-          font-size: 1.6em;
+          font-size: 1.75em;
         }
       }
 
@@ -134,22 +120,14 @@
 
     .hero_subtitle {
       @extend %track-in;
-      color: $primary-dark;
-      font-weight: 500;
+      @include adjust-font-size-to($sm-heading, .9);
       margin-top: 0.5em;
       margin-bottom: 1.5em;
-      font-size: 1.25em;
+      font-weight: 500;
 
       @include breakpoint($bp3) {
+        @include adjust-font-size-to($md-heading, 1.2);
         margin-left: -3rem;
-      }
-
-      @include breakpoint("1300px") {
-        font-size: 1.5em;
-      }
-
-      @include breakpoint($bp5) {
-        font-size: 1.5em;
       }
     }
 
@@ -200,7 +178,7 @@
     }
 
     @include breakpoint($bp2) {
-      width: 90%;
+      width: 80%;
     }
 
     @include breakpoint($bp3) {
@@ -229,7 +207,7 @@
 
     @include breakpoint($bp5) {
       top: -8em;
-      right: calc(( 100vw - 1600px ) / 2 * -1);
+      right: calc(( 100vw - 1500px ) / 2 * -1);
     }
   }
 }
