--- a/docroot/themes/custom/tower_health/components/_patterns/04-templates/full-width.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/04-templates/full-width.twig
@@ -1,7 +1,4 @@
-{% embed "@templates/_default.twig" with {
-  menu_items: header.templates.menu_items,
-  footer_menu_items: footer.templates.menu_items,
-} %}
+{% embed "@templates/_default.twig" %}
 
   {% block page_content %}
     {% include "@templates/_place-holder.twig" with {
