--- a/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
+++ b/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
@@ -3,8 +3,13 @@
   {{ patternLabFoot | raw }}
   <script src="../../js/jquery.min.js"></script>
   <script src="../../js/drupal.js"></script>
+  <script src="../../js/modernizr.js"></script>
+  <script src="../../js/modernizr-custom.js"></script>
+  
+  <script src="/dist/00-base/global/animations/animation.js"></script>
   <!-- This makes attach_library work wherever it is in the document flow. -->
   <script src="../../js/reload-scripts.js"></script>
+  
 
   </body>
 </html>
