--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.twig
@@ -1,4 +1,4 @@
-<div class="homepage-hero">
+<div class="homepage-hero js-section-animation">
   <div class="homepage-hero__content">
     <h1>
       {% if title_1 %}
