--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/cta-list-banner.twig
@@ -1,4 +1,4 @@
-<section class="cta-banner-list">
+<section class="cta-banner-list js-section-animation">
   <div class="cta-banner-list__content">
     <h1>
       {% if title_1 %}
