--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/cta-banner.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-banner/cta-banner.twig
@@ -1,4 +1,4 @@
-<section class="cta-banner">
+<section class="cta-banner js-section-animation">
   <div class="cta-banner__image">
     {% include "@molecules/image-background/image-background.twig" with {
       "img.src": img.src,
