Add attach behaviors and add to _01-foot for global behaviors.

--- a/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
+++ b/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
@@ -5,11 +5,12 @@
   <script src="../../js/drupal.js"></script>
   <script src="../../js/modernizr.js"></script>
   <script src="../../js/modernizr-custom.js"></script>
-  
+  <script src="../../js/drupal-attach-behaviors.js"></script>
+
+  <!-- Add any global javascript that will not use attach_library here -->
   <script src="/dist/00-base/global/animations/animation.js"></script>
+
   <!-- This makes attach_library work wherever it is in the document flow. -->
   <script src="../../js/reload-scripts.js"></script>
-  
-
   </body>
 </html>
