create an autocomplete dropdown style and some temp js so it partially functions in the styleguide

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/home/home.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/home/home.twig
@@ -7,7 +7,8 @@
       title_3: hero.title_3,
       subtitle: hero.subtitle,
       img: hero.img,
-      classes: hero.classes
+      classes: hero.classes,
+      autocomplete: hero.autocomplete
     } %}
     
     {% include "@organisms/cta-list-banner/cta-list-banner.twig" with {
