--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/homepage-hero.twig
@@ -17,8 +17,7 @@
     } %}
     {% endif %}
     <form class="homepage-hero__content__form">
-      <label for="provider-search">Find a Provider</label>
-      <input type="text" id="provider-search" placeholder="Search by Name, Specialty, or Condition">
+      {% include "@molecules/autocomplete-dropdown/autocomplete.twig" %}
       <button class="button button--primary" type="submit">Search Providers</button>
     </form>
   </div>
