--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/homepage-hero/_homepage-hero.scss
@@ -132,6 +132,8 @@
     }
 
     .homepage-hero__content__form {
+      position: relative;
+      z-index: 4;
 
       @include breakpoint($bp3, 1400px) {
         input[type="text"] {
