--- a/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
+++ b/docroot/themes/custom/tower_health/components/_meta/_01-foot.twig
@@ -8,9 +8,11 @@
   <script src="../../js/drupal-attach-behaviors.js"></script>
 
   <!-- Add any global javascript that will not use attach_library here -->
-  <script src="/dist/00-base/global/animations/animation.js"></script>
+  <script src="../../../../dist/00-base/global/animations/animation.js"></script>
+  <script src="../../../../dist/03-organisms/site/site-header/site-header.js"></script>
+  <script src="../../js/svgxuse.min.js"></script>
+  <script src="../../../../dist/02-molecules/menus/main-menu/main-menu.js"></script>
+  <script src="../../../../dist/02-molecules/autocomplete-dropdown/autocomplete.js"></script>
 
-  <!-- This makes attach_library work wherever it is in the document flow. -->
-  <script src="../../js/reload-scripts.js"></script>
   </body>
 </html>
