--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-header/_site-header.scss
@@ -45,6 +45,14 @@
       width: 25%;
     }
   }
+  
+  @include breakpoint($bp5) {
+    
+    .header-logo {
+      max-width: 325px;
+      width: 30%;
+    }
+  }
 }
 
 .header__right {
