--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/icon-button/_icon-button.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/icon-button/_icon-button.scss
@@ -45,7 +45,7 @@
 .icon-button:hover,
 .icon-button:focus {
   transform: scale(1.025);
-  box-shadow: 0px 2px 5px rgba($black, .25);
+  box-shadow: 0px 2px 5px rgba($black, 0.25);
   background-color: $trust-aa;
-  color: $white;  
+  color: $white;
 }
