--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/_default.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/_default.scss
@@ -11,55 +11,129 @@ $main-width: calc(100% - (#{$sidebar-width} + #{$gutter}));
 // Remove this and uncomment Grid code below to use CSS Grid.
 //
 
-.main {
-  @include bp3 {
-    display: flex;
-  }
-}
+// .main {
+//   @include bp3 {
+//     display: flex;
+//   }
+// }
 
-.main-sidebar {
-  margin-bottom: rhythm(2);
+// .top-sidebar,
+// .bottom-sidebar {
+//   margin-bottom: rhythm(2);
 
-  @include bp3 {
-    order: 2;
-    width: $sidebar-width;
-    margin-bottom: 0;
-  }
-}
+//   @include bp3 {
+//     order: 2;
+//     width: $sidebar-width;
+//     margin-bottom: 0;
+//   }
+// }
 
-.main-content {
-  width: 100%;
+// .main-content {
+//   width: 100%;
 
-  @include bp3 {
-    &--with-sidebar {
-      margin-right: $gutter;
-      width: $main-width;
-    }
-  }
-}
+//   @include bp3 {
+//     &--with-sidebar {
+//       margin-right: $gutter;
+//       width: $main-width;
+//     }
+//   }
+// }
 
 //
 // Layout Using CSS Grid (NO IE11 support)
 // Remove Flexbox code above and uncomment this section to use CSS Grid.
 //
 
-// .main {
-//   &--with-sidebar {
-//     @include bp3 {
-//       display: grid;
-//       grid-gap: $gutter;
-//       grid-template-areas: "content sidebar";
-//       grid-template-columns: $main-width #{$sidebar-width};
-//     }
-//   }
-// }
-//
-// .main-sidebar {
-//   grid-area: sidebar;
-//   margin-bottom: $space-double;
-// }
-//
-// .main-content {
-//   grid-area: content;
-//   width: 100%;
-// }
+.page {
+  
+  &--container {
+    @extend %grid-container; 
+    
+    .no-cssgrid & {
+      @extend %clearfix;
+    }
+    
+    @include bp3 {
+      display: grid;
+      grid-gap: $gutter;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+      
+      .no-cssgrid & {
+        display: block;
+      } 
+    }
+    
+    @include bp4 {
+      grid-template-columns: 1fr 1fr 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
+    }
+
+    .top-sidebar {
+      @include breakpoint($bp3) {
+        grid-column: 3 / span 1; 
+        grid-row: 1 / span 1;
+        
+        .no-cssgrid & {
+          width: 33%;
+          float: right;
+          clear: right;
+        }
+      }
+      
+      @include breakpoint($bp4) {
+        grid-column: 4 / span 1;
+        
+        .no-cssgrid & {
+          width: 25%;
+          float: right;
+          clear: right;
+        } 
+      }
+    }
+
+    .bottom-sidebar {
+      @include breakpoint($bp3) {
+        grid-column: 3 / span 1; 
+        grid-row: 2 / span 1;
+        
+        .no-cssgrid & {
+          width: 33%;
+          float: right;
+          clear: right;
+        }
+      }
+      
+      @include breakpoint($bp4) {
+        grid-column: 4 / span 1;
+        
+        .no-cssgrid & {
+          width: 25%;
+          float: right;
+          clear: right;
+        }  
+      }
+    }
+
+    .main-content {
+      @include breakpoint($bp3) {
+        grid-column: 1 / span 2; 
+        grid-row: 1 / span 2;
+        
+        .no-cssgrid & {
+          width: 66%;
+          float: left;
+        }
+      }
+      
+      @include breakpoint($bp4) {
+        grid-column: 1 / span 3; 
+        
+        .no-cssgrid & {
+          width: 75%;
+          float: left;
+        }
+      }
+    }
+  }
+}
