--- a/docroot/themes/custom/tower_health/components/_patterns/04-templates/_default.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/04-templates/_default.twig
@@ -5,14 +5,22 @@
 
 {% set main_content_base_class = main_content_base_class|default('main-content') %}
 {% set main_content_modifiers = [] %}
+  
+{% set page_base_class = page_base_class|default('page') %}
+{% set page_modifiers = [] %}
 
-{% if sidebar %}
-  {% set main_modifiers = main_modifiers|merge(['with-sidebar']) %}
-  {% set main_content_modifiers = main_content_modifiers|merge(['with-sidebar']) %}
+
+{% if top_sidebar or bottom_sidebar %}
+  {% set page_modifiers = page_modifiers|merge(['with-sidebar']) %}
 {% endif %}
 
-<div {{ bem('layout-container', (layout_modifiers)) }}>
-  {% block page_header %}
+{% if full_width == false %}
+  {% set page_modifiers = page_modifiers|merge(['container']) %}
+{% endif %}
+
+<div>
+  <a class="element-focusable" href="#main-content">Jump to Page Content</a>
+  {% block site_header %}
     {% include "@organisms/site/site-header/site-header.twig" %}
   {% endblock %}
 
@@ -21,15 +29,28 @@
 
   <main role="main" {{ bem(main_base_class, (main_modifiers), main_blockname) }}>
     <a id="main-content" tabindex="-1"></a>{# link is in html.html.twig #}
-
-    {% if sidebar %}
-      <aside class="main-sidebar" role="complementary">
-        {% block page_sidebar %}{% endblock %}
-      </aside>
+    {% if page_header %}
+      <div class="page-header">
+      {% block page_header %}{% endblock %}
+      </div>
     {% endif %}
+    
+    <div {{ bem(page_base_class, (page_modifiers), page_blockname) }}>
+      {% if top_sidebar %}
+        <aside class="top-sidebar" role="complementary">
+          {% block top_page_sidebar %}{% endblock %}
+        </aside>
+      {% endif %}
 
-    <div {{ bem(main_content_base_class, (main_content_modifiers), main_content_blockname) }}>
-      {% block page_content %}{% endblock %}
+      <div {{ bem(main_content_base_class, (main_content_modifiers), main_content_blockname) }}>
+        {% block page_content %}{% endblock %}
+      </div>
+      
+      {% if bottom_sidebar %}
+        <aside class="bottom-sidebar" role="complementary">
+          {% block bottom_page_sidebar %}{% endblock %}
+        </aside>
+      {% endif %}
     </div>
 
   </main>
