create and style a basic header and add it to the basic page template

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/basic/basic.twig
@@ -6,7 +6,9 @@
 }%}
   
   {% block page_header %}
-    Placeholder for Basic Header
+    {% include "@organisms/basic-header/basic-header.twig" with {
+      breadcrumb: header.breadcrumb
+    } %}
   {% endblock %}
   
   {% block top_page_sidebar %}
