--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/_default.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/layouts/_default.scss
@@ -3,7 +3,7 @@
 //
 
 $sidebar-width: 33%;
-$gutter: $space;
+$gutter: 2em;
 $main-width: calc(100% - (#{$sidebar-width} + #{$gutter}));
 
 //
@@ -57,7 +57,7 @@ $main-width: calc(100% - (#{$sidebar-width} + #{$gutter}));
       display: grid;
       grid-gap: $gutter;
       grid-template-columns: 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
+      grid-auto-rows: auto 1fr;
       
       .no-cssgrid & {
         display: block;
@@ -66,7 +66,7 @@ $main-width: calc(100% - (#{$sidebar-width} + #{$gutter}));
     
     @include bp4 {
       grid-template-columns: 1fr 1fr 1fr 1fr;
-      grid-template-rows: 1fr 1fr;
+      grid-auto-rows: auto 1fr;
     }
 
     .top-sidebar {
@@ -76,6 +76,7 @@ $main-width: calc(100% - (#{$sidebar-width} + #{$gutter}));
         
         .no-cssgrid & {
           width: 33%;
+          padding-left: $gutter;
           float: right;
           clear: right;
         }
@@ -99,6 +100,7 @@ $main-width: calc(100% - (#{$sidebar-width} + #{$gutter}));
         
         .no-cssgrid & {
           width: 33%;
+          padding-left: $gutter;
           float: right;
           clear: right;
         }
