style all blockquotes to be full-width at mobile

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/02-text/text/_text.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/02-text/text/_text.scss
@@ -9,16 +9,18 @@
   padding: 1em 0 1em 1em;
   font-weight: 600;
   
-  &--left {
-    width: 50%;
-    margin-right: 1em;
-    float: left;
-  }
-  
-  &--right {
-    width: 50%;
-    margin-left: 1em;
-    float: right;
+  @include breakpoint($bp3) {
+    &--left {
+      width: 50%;
+      margin-right: 1em;
+      float: left;
+    }
+    
+    &--right {
+      width: 50%;
+      margin-left: 1em;
+      float: right;
+    } 
   }
 }
 
