modify list styles

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/03-lists/_lists.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/03-lists/_lists.scss
@@ -21,7 +21,7 @@ ol {
 
 .list-item {
   margin-bottom: 0.2em;
-  padding-left: 1em;
+  padding-left: .5em;
 }
 
 // TODO: BEM selectors should be applied to wysiwyg-created content
