--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/07-tables/tables.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/07-tables/tables.twig
@@ -7,7 +7,9 @@
 <table class="table">
 	<thead>
 		<tr>
-			<th colspan="4" class="table__heading-cell">This is a heading</th>
+			<th class="table__heading-cell">Type</th>
+      <th colspan="2" class="table__heading-cell">Description</th>
+      <th class="table__heading-cell">More Information</th>
 		</tr>
 	</thead>
 	<tbody>
