--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/07-tables/_tables.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/07-tables/_tables.scss
@@ -6,7 +6,7 @@ $table-border: $gray-light;
   border-radius: 4px;
   border-spacing: 0;
   background-color: $table-gray;
-  margin: 1em 0;
+  margin: 2em 0;
   width: 100%;
 }
 
@@ -27,6 +27,9 @@ $table-border: $gray-light;
   font-weight: 700;
   padding: 1.2em;
   text-align: left;
+  border-bottom: 4px solid $growth;
+  background-color: $white;
+  
 }
 
 .table__row {
@@ -68,8 +71,10 @@ $table-border: $gray-light;
 
 .table__footer-cell,
 .table__footer-cell:first-child {
+  @include adjust-font-size-to($label, .9);
   border-bottom: none;
   border-top: 1px solid $table-border;
+  font-weight: 300;
 }
 
 // TODO: BEM selectors should be applied to wysiwyg-created content
