modify inline video styles

--- a/docroot/themes/custom/tower_health/components/_patterns/01-atoms/08-video/_video.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/01-atoms/08-video/_video.scss
@@ -5,6 +5,7 @@
   padding-top: 35px;
   padding-bottom: 56.25%; // 56.25% = 16x9
   position: relative;
+  margin: 2em 0;
 
   &--full {
     padding-bottom: 75%; // 75% = 4x3
