--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/basic-header.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/basic-header/basic-header.twig
@@ -1,4 +1,4 @@
-<header class='basic-header'>
+<header class='basic-header {% if header.style == 'secondary' %}basic-header--secondary{% endif %}'>
   <div class="basic-header__container">
     {% if header.breadcrumb %}
     {% include "@molecules/menus/breadcrumbs/breadcrumbs.twig" with {
@@ -12,6 +12,10 @@
         "heading": header.title,
         "heading_base_class": "basic-header__title"
       } %}
+      
+      {% if header.lede %}
+      <span class="basic-header__lede">{{ header.lede}}</span>
+      {% endif %}
     </div>
   </div>
 </header>
