modify cta banner title positioning

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/cta-list-banner/_cta-list-banner.scss
@@ -20,8 +20,8 @@
 
   @include breakpoint($bp3) {
     border-top: 6px solid $growth;
-    padding: 3em 0 5em;
-    width: 60%;
+    padding: 3em 0 5em 2em;
+    width: 50%;
     max-width: 55%;
     
     &::before {
