adjust the font scale in the utility navigation, round the buttons

--- a/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_01-init.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/00-base/global/base/_01-init.scss
@@ -40,6 +40,7 @@ $md-heading: 1.5 * $base-font-size;
 $sm-heading: 1.25 * $base-font-size;
 $xs-heading: 1.15 * $base-font-size;
 $text: 1 * $base-font-size;
+$sm-text: 0.9 * $base-font-size;
 $label: 0.8 * $base-font-size;
 $crumb: 0.7 * $base-font-size;
 
