adjust footer content and some styles

--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/_site-footer.scss
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/_site-footer.scss
@@ -67,7 +67,7 @@
       @include adjust-font-size-to($label, .8);
       width: 100%;
       text-align: center;
-      margin-bottom: 2em;
+      margin-bottom: 1em;
       display: flex;
       flex-wrap: wrap;
       order: 1;
@@ -143,7 +143,8 @@
           order: 2;
         }
 
-        a {
+        a,
+        span {
           display: block;
         }
       }
