--- a/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/03-organisms/site/site-footer/site-footer.twig
@@ -22,7 +22,8 @@
           {% endfor %}
         </div>
         <div class="footer__info__contact">
-          {{ footer_contact.address }}
+          <span>{{ footer_contact.address_1 }}</span>
+          <span>{{ footer_contact.address_2 }}</span>
           <a href="tel:{{footer_contact.phone}}">{{ footer_contact.phone }}</a>
         </div>
       </div>
