make cta banner adjustments on homepage

--- a/docroot/themes/custom/tower_health/components/_patterns/05-pages/home/home.twig
+++ b/docroot/themes/custom/tower_health/components/_patterns/05-pages/home/home.twig
@@ -22,8 +22,10 @@
     {% include "@organisms/cta-banner/cta-banner.twig" with {
       title_1: cta_banner.title_1,
       title_2: cta_banner.title_2,
+      subtitle: cta_banner.subtitle,
       img: cta_banner.img,
-      classes: cta_banner.classes
+      classes: cta_banner.classes,
+      button: cta_banner.button
     } %}
 
   {% endblock %}
